# clearml-demo

./: README.md  environment.yml  main.py  pyproject.toml  requirements.txt
