[tool.poetry]
name = "clearml-demo"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
clearml = "^1.1.6"
tensorflow-cpu = "^2.7.0"
libclang = "<12.0.0"
typer = "^0.4.0"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
datasets = "^1.18.0"
matplotlib = "^3.5.1"
tensorflow-addons = "^0.15.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
